<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyApp</string>
    <string name="title_helloword">Hello World</string>
    <string name="title_welcome">welcome</string>
    <string name="title_login">登录</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tx_username">用户名：</string>
    <string name="tx_password">密码：</string>
    <string name="tx_remember_password">记住密码</string>
    <string name="tx_login">登录</string>
    <string name="tx_reg">注册</string>
    
    <string name="MENU_ABOUT">关于我们</string>
    <string name="MENU_EXIT">退出</string>
    <string name="aboutInfo">关于我们</string>
    <string name="ok_label">确定</string>
    
    <string name="some_title">Other</string>

</resources>